Added exit button in settings page and missing translations

--- a/frontend/src/locales/cs/translation.json
+++ b/frontend/src/locales/cs/translation.json
@@ -19,6 +19,8 @@
   "noTrainings": "Nejsou naplánovány žádné tréninky.",
   "languageSettings": "Nastavení jazyka",
   "chooseLanguage": "Vyberte preferovaný jazyk",
+  "language": "Jazyk",
+  "settings": "Nastavení",
   "admins": "Administrátoři",
   "users": "Uživatelé",
   "clubMembersOverview": "Přehled členů klubu",
