--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -19,6 +19,8 @@
   "noTrainings": "No trainings scheduled.",
   "languageSettings": "Language Settings",
   "chooseLanguage": "Choose preferred language",
+  "language": "Language",
+  "settings": "Settings",
   "admins": "Admins",
   "users": "Users",
   "clubMembersOverview": "Club Members Overview",
