--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -19,6 +19,8 @@
   "noTrainings": "Aucun entraînement prévu.",
   "languageSettings": "Paramètres de langue",
   "chooseLanguage": "Choisissez votre langue préférée",
+  "language": "Langue",
+  "settings": "Paramètres",
   "admins": "Administrateurs",
   "users": "Utilisateurs",
   "clubMembersOverview": "Aperçu des membres du club",
