--- a/frontend/src/locales/ja/translation.json
+++ b/frontend/src/locales/ja/translation.json
@@ -19,6 +19,8 @@
   "noTrainings": "今後のトレーニングは予定されていません。",
   "languageSettings": "言語設定",
   "chooseLanguage": "希望する言語を選択してください",
+  "language": "言語",
+  "settings": "設定",
   "admins": "管理者",
   "users": "ユーザー",
   "clubMembersOverview": "クラブメンバーの概要",
