--- a/frontend/src/locales/pl/translation.json
+++ b/frontend/src/locales/pl/translation.json
@@ -19,6 +19,8 @@
   "noTrainings": "Brak zaplanowanych nadchodzących treningów.",
   "languageSettings": "Ustawienia języka",
   "chooseLanguage": "Wybierz preferowany język",
+  "language": "Język",
+  "settings": "Ustawienia",
   "admins": "Administratorzy",
   "users": "Użytkownicy",
   "clubMembersOverview": "Przegląd członków klubu",
